[gd_scene load_steps=31 format=3 uid="uid://dkaal7dxlbvqy"]

[ext_resource type="Texture2D" uid="uid://b2u00ydayqdco" path="res://scenes/flowershop/environment/foreground_lightson.png" id="1"]
[ext_resource type="Texture2D" uid="uid://3lhyut1muef7" path="res://scenes/flowershop/environment/background_lightson.png" id="2"]
[ext_resource type="Texture2D" uid="uid://81r25y72s447" path="res://scenes/flowershop/environment/background_lights_01.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cag0wj5bbjsak" path="res://scenes/flowershop/environment/background_lightsoff.png" id="4"]
[ext_resource type="PackedScene" uid="uid://dbq16g4ghgxw6" path="res://scenes/flowershop/Fox.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://chtbfl72vdj4t" path="res://scenes/flowershop/environment/foreground_lights_01.png" id="6"]
[ext_resource type="PackedScene" uid="uid://cvkideptcxtuk" path="res://scenes/flowershop/ui/stats/StatusPanel.tscn" id="7"]
[ext_resource type="Texture2D" uid="uid://ct2j6c85c1u1f" path="res://scenes/flowershop/environment/background_lights_02.png" id="8"]
[ext_resource type="Texture2D" uid="uid://bhd76rhqkh0en" path="res://scenes/flowershop/environment/foreground_lightsoff.png" id="13"]
[ext_resource type="Texture2D" uid="uid://c0hmbevoni0aj" path="res://scenes/flowershop/environment/foreground_lights_02.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b8euciit3mbak" path="res://pet/manuka.png" id="15"]
[ext_resource type="Script" path="res://scenes/flowershop/scene.gd" id="16"]
[ext_resource type="PackedScene" uid="uid://lhxe71vragto" path="res://scenes/flowershop/ui/controls/UiControls.tscn" id="17"]
[ext_resource type="SpriteFrames" uid="uid://dvduknacnqx3w" path="res://scenes/flowershop/food/food.tres" id="18"]
[ext_resource type="Texture2D" uid="uid://w8mhvqq6mwar" path="res://pet/pet_bath_3.png" id="19"]
[ext_resource type="Texture2D" uid="uid://tsn4w2wvry4e" path="res://pet/pet_bath_4.png" id="20"]
[ext_resource type="PackedScene" uid="uid://07vynairarcd" path="res://scenes/flowershop/ui/transition/Transition.tscn" id="21"]
[ext_resource type="Texture2D" uid="uid://cmaf4nq2rssdm" path="res://pet/pet_bath_2.png" id="22"]
[ext_resource type="Texture2D" uid="uid://cpldtuyo8o40s" path="res://pet/pet_bath_0.png" id="23"]
[ext_resource type="Shader" path="res://ui/outline2D.gdshader" id="24"]
[ext_resource type="Texture2D" uid="uid://c847oliuyrwbs" path="res://pet/pet_bath_1.png" id="25"]
[ext_resource type="Texture2D" uid="uid://d2mna3v0bi0u6" path="res://scenes/flowershop/environment/background_bath.png" id="26"]
[ext_resource type="Script" path="res://scenes/flowershop/FoodDrop.gd" id="28"]

[sub_resource type="SpriteFrames" id="12"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": false,
"name": &"lights_off",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": false,
"name": &"lights_on",
"speed": 8.0
}]

[sub_resource type="ShaderMaterial" id="15"]
shader = ExtResource("24")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}],
"loop": false,
"name": &"lights_off",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": false,
"name": &"lights_on",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="Animation" id="17"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="18"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-8.0, -12.0, -6.0, -8.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ja2s"]
_data = {
"RESET": SubResource("17"),
"idle": SubResource("18")
}

[node name="ShopScene" type="Node2D" groups=["scene"]]
script = ExtResource("16")

[node name="UIControls" parent="." instance=ExtResource("17")]
unique_name_in_owner = true

[node name="StatusPanel" parent="UIControls" instance=ExtResource("7")]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1.0
offset_top = 32.0
offset_right = 98.0
offset_bottom = 141.0

[node name="ShopView" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Background" type="AnimatedSprite2D" parent="ShopView"]
sprite_frames = SubResource("12")
animation = &"lights_on"
frame = 3
centered = false

[node name="Fox" parent="ShopView" instance=ExtResource("5")]

[node name="LeftBound" type="Node2D" parent="ShopView"]
unique_name_in_owner = true
position = Vector2(54, 75)

[node name="RightBound" type="Node2D" parent="ShopView"]
unique_name_in_owner = true
position = Vector2(104, 75)

[node name="FoodDrop" type="AnimatedSprite2D" parent="ShopView"]
unique_name_in_owner = true
material = SubResource("15")
position = Vector2(105, -39)
sprite_frames = ExtResource("18")
animation = &"fries:eat"
frame = 5
script = ExtResource("28")

[node name="Foreground" type="AnimatedSprite2D" parent="ShopView"]
sprite_frames = SubResource("2")
animation = &"lights_on"
frame = 3
centered = false

[node name="WashScene" type="Node2D" parent="."]
process_mode = 3
visible = false

[node name="Background" type="Sprite2D" parent="WashScene"]
texture = ExtResource("26")
centered = false

[node name="Fox" type="Node2D" parent="WashScene"]
position = Vector2(81, 75)

[node name="Sprite2D" type="AnimatedSprite2D" parent="WashScene/Fox"]
position = Vector2(0, -19)
sprite_frames = SubResource("16")
autoplay = "default"

[node name="Manuka" type="Sprite2D" parent="WashScene/Fox"]
texture = ExtResource("15")
offset = Vector2(-26, -14)

[node name="AnimationPlayer" type="AnimationPlayer" parent="WashScene/Fox/Manuka"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_4ja2s")
}

[node name="Transition" parent="." instance=ExtResource("21")]
visible = false
offset_left = 0.0
offset_right = 160.0

[connection signal="action_pressed" from="UIControls" to="." method="_on_UIControls_action_pressed"]
